--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
 
 input {
   width: 100%;
-  margin: auto;
+  margin: 5px 0 10px;
   padding: 10px;
   border: 1px solid rgb(226 226 226);
   border-radius: 3px;
@@ -14,20 +14,27 @@ input {
 h1 {
   text-align: center;
   margin-right: 630px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Times New Roman", Times, serif;
   color: rgb(255, 255, 255);
   white-space: nowrap;
 }
 
-button {
+#submit {
+  width: 100px;
   font-size: 16px;
   background-color: #552b81;
   color: white;
-  margin: 10px 1px;
-  padding: 9.5px 25px;
+  margin: 15px 1px;
+  padding: 10px 20px 8px;
   border: 1px solid rgb(226 226 226);
   border-radius: 5px;
   float: right;
+  cursor: pointer;
+}
+
+#submit:hover {
+  background-color: white;
+  color: #552b81;
 }
 
 header {
@@ -38,15 +45,12 @@ header {
 }
 
 img {
+  margin-bottom: 5px;
   width: 100%;
 }
 
 h2 {
   margin-left: 10px;
-}
-
-.notes {
-  height: 200px;
 }
 
 h3 {
@@ -55,10 +59,19 @@ h3 {
 }
 
 textarea {
+  margin-top: 5px;
   width: 100%;
   resize: none;
   font-family: Arial, Helvetica, sans-serif;
   border-style: none;
   border: 1px solid rgb(226 226 226);
-  border-radius: 3px;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 15px;
+}
+
+label {
+  font-size: 20px;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: bold;
 }
