--- a/css/styles.css
+++ b/css/styles.css
@@ -11,12 +11,37 @@ input {
   font-size: 17px;
 }
 
-h1 {
-  text-align: center;
-  margin-right: 630px;
+input:focus {
+  outline: none !important;
+  border: 2px solid purple;
+}
+
+.code-journal-header {
   font-family: "Times New Roman", Times, serif;
   color: rgb(255, 255, 255);
   white-space: nowrap;
+  display: inline-block;
+}
+
+.entries-header {
+  display: inline-block;
+  margin-left: 40px;
+  font-size: 20px;
+}
+
+#entries-header {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#entries-header:hover {
+  color: #000;
+}
+
+.top-header {
+  width: 575px;
+  margin-left: 28%;
 }
 
 #submit {
@@ -32,9 +57,32 @@ h1 {
   cursor: pointer;
 }
 
+#new {
+  width: 100px;
+  font-size: 16px;
+  background-color: #552b81;
+  color: white;
+  padding: 10px 20px 8px;
+  border: 1px solid rgb(226 226 226);
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
 #submit:hover {
   background-color: white;
   color: #552b81;
+}
+
+#new:hover {
+  background-color: white;
+  color: #552b81;
+}
+
+.column-entries {
+  display: flex;
+  width: 900px;
+  justify-content: space-between;
 }
 
 header {
@@ -44,7 +92,7 @@ header {
   width: 100%;
 }
 
-img {
+.placeholder {
   margin-bottom: 5px;
   width: 100%;
 }
@@ -70,8 +118,118 @@ textarea {
   font-size: 15px;
 }
 
+textarea:focus {
+  outline: none !important;
+  border: 2px solid purple;
+}
+
 label {
   font-size: 20px;
   font-family: "Times New Roman", Times, serif;
   font-weight: bold;
+}
+
+li:nth-child(n+1) {
+  list-style: none;
+}
+
+li > h2 {
+  color: rgb(0, 0, 0);
+}
+
+p {
+  margin-left: 10px;
+}
+
+.place-holder-description {
+  text-align: center;
+}
+
+img {
+  width: 450px;
+}
+
+ul {
+  padding-inline-start: 0;
+}
+
+i {
+  margin-left: 15px;
+  float: right;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+.delete-entry {
+  margin: 20px 0 0 2px;
+  color: red;
+}
+
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 400px;
+  height: 170px;
+  border-radius: 5px;
+}
+
+.show-modal {
+  display: block;
+  position: fixed;
+  padding-top: 400px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0);
+  background-color: rgb(0 0 0 / 30%);
+}
+
+.modal {
+  position: fixed;
+  padding-top: 400px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0);
+  background-color: rgb(0 0 0 / 60%);
+}
+
+#button-cancel,
+#button-confirm {
+  border: none;
+  color: white;
+  margin: 30px;
+  padding: 5px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 15px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+#button-cancel {
+  background-color: rgb(177, 177, 177);
+  color: black;
+}
+
+#button-confirm {
+  background-color: red;
+}
+
+.modal-p {
+  margin: 55px 0 5px;
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+}
+
+.modal-body {
+  display: flex;
+  justify-content: center;
 }
